# Redis-in-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: linlist.h  persistence.h  resp.h
src/: main.c
src/protocols/: CMakeLists.txt  resp.c
src/server/: CMakeLists.txt  client.c  linlist.c  linlist.h  persistence.c  server.c
